--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,1 +1,10 @@
 name: Hello World
+
+on: push
+
+jobs:
+  init:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run hello world to console
+      run: echo Hello World! 
