--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,10 +1,8 @@
 name: Hello World
-
-on: push
-
+'on': push
 jobs:
   init:
     runs-on: ubuntu-latest
     steps:
       - name: Run hello world to console
-      run: echo Hello World! 
+    run: echo Hello World!
